--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compitable" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script defer src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js"></script>
 </head>
 <body>
     <div class="toolbox-cont">
@@ -15,7 +13,7 @@
             <div class="color red"></div>
             <div class="color blue"></div>
             <div class="color green"></div>
-            <div class="color black active"></div>
+            <div class="color pink"></div>
         </div>
         <div class="action-btn-cont">
             <div class="add-btn">
@@ -26,26 +24,28 @@
             </div>
         </div>
     </div>
-
     <div class="main-cont">
         <!-- <div class="ticket-cont">
-            <div class="ticket-color red"></div>
-            <div class="ticket-id">#eidut3</div>
+            <div class="ticket-color"></div>
+            <div class="ticket-id">#5gf832</div>
             <div class="ticket-area">Some task</div>
-        </div>
-        -->
+        </div> -->
     </div>
-
     <div class="modal-cont">
         <textarea class="textarea-cont" placeholder="Enter Your Task"></textarea>
-        <div class="priority-color-cont"> 
-            <div class="priority-color red "></div>
-            <div class="priority-color blue "></div>
+        <div class="priority-color-cont">
+            <div class="priority-color red active"></div>
+            <div class="priority-color blue"></div>
             <div class="priority-color green"></div>
-            <div class="priority-color black active"></div>
-
+            <div class="priority-color pink"></div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js"></script>
     <script src="./script.js"></script>
+    <!-- <script>
+         // Instantiate
+        var uid = new ShortUniqueId();
+        document.write(uid.rnd());
+    </script> -->
 </body>
 </html>
